--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"python.pythonPath": "venv/bin/python"
+	"python.pythonPath": "venv/bin/python",
+	"python.linting.pylintEnabled": true,
+	"python.linting.enabled": false,
+	"editor.formatOnSave": false,
+	"files.trimTrailingWhitespace": false
 }
